CORE-41673: eGift - COS Web (KW) | Background & Space issue fix.

--- a/docroot/themes/custom/transac/alshaya_cos_stores/conditional-sass/promo-blocks/component/_promo-blocks.scss
+++ b/docroot/themes/custom/transac/alshaya_cos_stores/conditional-sass/promo-blocks/component/_promo-blocks.scss
@@ -35,7 +35,7 @@
 
 .c-promo__item:nth-child(2) {
   @include breakpoint($desktop) {
-    margin-bottom: 1.75rem;
+    margin-bottom: rem(28);
   }
 }
 
