--- a/docroot/themes/custom/transac/alshaya_cos_stores/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_cos_stores/sass/config/_colors.scss
@@ -486,6 +486,7 @@ $country-switcher-label-mobile: $black-two;
 // eGift Landing page
 $egift-accordion-active-title: $black;
 $egift-banner-bg: $bright-gray;
+$egift-accordion-bg: $bright-gray;
 
 // eGift purchase page
 $egift-amount-list-border: $bright-gray;
