--- a/docroot/modules/custom/alshaya_main_menu/templates/alshaya-main-menu-level2.html.twig
+++ b/docroot/modules/custom/alshaya_main_menu/templates/alshaya-main-menu-level2.html.twig
@@ -31,31 +31,35 @@
       {% endfor %}
     {% endif %}
   </div>
-  {% if (menu_type == 'default') or (menu_type == 'menu_dynamic_display') %}
-    {% if data.l1_object.text_links_paragraph is not empty %}
-    <div class="term-image__wrapper text-link-para">
-    {% else %}
-    <div class="term-image__wrapper">
+
+  {# Show highlight paragraphs only if the config is true. #}
+  {% if show_highlight %}
+    {% if (menu_type == 'default') or (menu_type == 'menu_dynamic_display') %}
+      {% if data.l1_object.text_links_paragraph is not empty %}
+      <div class="term-image__wrapper text-link-para">
+      {% else %}
+      <div class="term-image__wrapper">
+      {% endif %}
+        {#Term image starts#}
+        {{ alshaya_main_menu('alshaya_main_menu_category_image', data.l1_object) }}
+        {#Term image ends#}
+        {#Highlight image starts#}
+        {{ alshaya_main_menu('alshaya_main_menu_highlights', data.l1_object) }}
+        {#Highlight image end#}
+      </div>
+    {% elseif menu_type == 'menu_inline_display' %}
+      {% if data.text_links_paragraph is not empty %}
+      <div class="term-image__wrapper text-link-para">
+      {% else %}
+      <div class="term-image__wrapper">
+      {% endif %}
+        {#Term image starts#}
+        {{ alshaya_main_menu('alshaya_main_menu_category_image', data) }}
+        {#Term image ends#}
+        {#Highlight image starts#}
+        {{ alshaya_main_menu('alshaya_main_menu_highlights', data) }}
+        {#Highlight image end#}
+      </div>
     {% endif %}
-      {#Term image starts#}
-      {{ alshaya_main_menu('alshaya_main_menu_category_image', data.l1_object) }}
-      {#Term image ends#}
-      {#Highlight image starts#}
-      {{ alshaya_main_menu('alshaya_main_menu_highlights', data.l1_object) }}
-      {#Highlight image end#}
-    </div>
-  {% elseif menu_type == 'menu_inline_display' %}
-    {% if data.text_links_paragraph is not empty %}
-    <div class="term-image__wrapper text-link-para">
-    {% else %}
-    <div class="term-image__wrapper">
-    {% endif %}
-      {#Term image starts#}
-      {{ alshaya_main_menu('alshaya_main_menu_category_image', data) }}
-      {#Term image ends#}
-      {#Highlight image starts#}
-      {{ alshaya_main_menu('alshaya_main_menu_highlights', data) }}
-      {#Highlight image end#}
-    </div>
   {% endif %}
 </ul>
