--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine.html.twig
@@ -67,7 +67,9 @@
         </div>
 
         {# Delivery options will load if express delivery enabled. #}
-        <div id="sdd-ed-labels"></div>
+        {% if content.delivery_options.sdd_ed_enabled %}
+          <div id="sdd-ed-labels"></div>
+        {% endif %}
         {% if content.same_day_delivery_text and content.delivery_options is empty %}
           <div class="same-day-delivery">
             <div class="same-day-content">
