CORE-0036: Signup: Text font/alignment  and spacing between headers is not proper.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -838,8 +838,8 @@ $online-return-dark-txt: $hnm-black-three;
 $hm-membership-success-popup-bg: $white-linen;
 
 // Hello Member registration
-$hm-registration-accordion-bg: $white-linen;
-$hm-registration-fields-bg: $white-linen;
+$hm-registration-accordion-bg: $grey9;
+$hm-registration-fields-bg: $grey9;
 
 // Hello Member points block
 $hm-points-block-bg: $white-linen;
