CORE-42752: Super Category | Spacing issue in header on user/login page.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-header.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-header.scss
@@ -163,7 +163,7 @@
     }
 
     & {
-      margin-top: 5.5rem;
+      margin-top: rem(114);
 
       @include breakpoint($only-tablet) {
         margin-top: 5.4375rem;
@@ -176,7 +176,7 @@
       }
 
       html[lang="ar"] & {
-        margin-top: 5.5rem;
+        margin-top: rem(114);
 
         @include breakpoint($only-tablet) {
           margin-top: 5.4375rem;
