CORE-41837: COS | PROD | eGift Tab misalignment.

--- a/docroot/themes/custom/transac/alshaya_cos_stores/sass/components/mega-menu/_menu.scss
+++ b/docroot/themes/custom/transac/alshaya_cos_stores/sass/components/mega-menu/_menu.scss
@@ -11,6 +11,16 @@
   }
 }
 
+.block-alshaya-main-menu {
+  li {
+    &.menu--one__list-item {
+      .menu__link {
+        text-transform: none;
+      }
+    }
+  }
+}
+
 @include breakpoint($desktop) {
   .block-alshaya-main-menu {
     ul {
