--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine.html.twig
@@ -67,10 +67,9 @@
         </div>
 
         {# Delivery options will load if express delivery enabled. #}
-        {% if content.delivery_options.sdd_ed_enabled %}
+        {% if content.delivery_options %}
           <div id="sdd-ed-labels"></div>
-        {% endif %}
-        {% if content.same_day_delivery_text and content.delivery_options is empty %}
+        {% elseif content.same_day_delivery_text and content.delivery_options is empty %}
           <div class="same-day-delivery">
             <div class="same-day-content">
               <p>{{ content.same_day_delivery_text }}</p>
