CORE-42873: Changed the line-height of Aura OTP message (CORE).

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-forms/component/_aura-modal-form-layout.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-forms/component/_aura-modal-form-layout.scss
@@ -237,6 +237,7 @@
         .otp-sent-to-mobile-label {
           position: relative;
           margin-bottom: rem(30);
+          line-height: rem(22);
         }
       }
 
