CORE-0083: My account || Points balance section || Highlighted letters Case issue in Points bar.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-tier-progress.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-tier-progress.scss
@@ -12,6 +12,7 @@
     color: $hm-points-block-light-txt;
     width: 14%;
     text-align: $left;
+    text-transform: capitalize;
 
     @include breakpoint($only-tablet) {
       width: 24%;
