CORE-43026: Benefits listing on my account and home page.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-points.scss
@@ -26,6 +26,10 @@
       letter-spacing: 1.35px;
       font-family: $alshaya-bold;
 
+      @include breakpoint($only-tablet) {
+        font-size: rem(20);
+      }
+
       span {
         margin-#{$right}: rem(8);
       }
