--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_benefits.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-accounts-hello-member/component/_benefits.scss
@@ -1,65 +1,7 @@
 .my-benefits-wrapper {
+  display: flex;
+  flex-flow: row wrap;
   margin-top: rem(36);
-  margin-#{$right}: rem(18);
-  margin-#{$left}: rem(36);
-  padding-bottom: rem(36);
-
-  @include breakpoint($only-mobile) {
-    margin-top: rem(41);
-    margin-#{$right}: 0;
-    margin-#{$left}: 0;
-  }
-
-  .slick-slider {
-    button {
-      background: transparent;
-
-      @include breakpoint($only-mobile) {
-        display: none !important;
-      }
-    }
-
-    .slick-dots {
-      bottom: rem(-64);
-
-      @include breakpoint($only-mobile) {
-        text-align: center;
-      }
-
-      button {
-        @include breakpoint($only-mobile) {
-          display: block !important;
-        }
-      }
-    }
-
-    .slick-slide {
-      @include breakpoint($tablet) {
-        padding-#{$right}: rem(10);
-      }
-
-      &:nth-child(3n+3) {
-        @include breakpoint($tablet) {
-          padding-#{$left}: 0;
-        }
-      }
-    }
-
-    .slick-prev {
-      #{$left}: rem(-30);
-    }
-
-    .slick-next {
-      #{$right}: rem(-19);
-    }
-
-    .slick-dots {
-      li button {
-        display: block;
-        text-indent: rem(-9999);
-      }
-    }
-  }
 
   .my-offers-vouchers-details {
     text-align: center;
@@ -67,9 +9,25 @@
     background: $hm-my-offers-bg;
     min-height: rem(366);
 
+    @include breakpoint($tablet) {
+      width: calc(100% / 3 - 2% + 2% / 3 - 0.01px);
+      margin-bottom: 5%;
+      margin-#{$left}: 2%;
+
+      &:nth-of-type(3n+1) {
+        margin-#{$left}: 0;
+      }
+    }
+
     @include breakpoint($only-mobile) {
-      width: rem(250) !important;
-      margin-#{$right}: rem(10);
+      flex: 0 0 100%;
+      margin-bottom: rem(20);
+    }
+
+    .image-container {
+      img {
+        width: 100%;
+      }
     }
 
     .title {
@@ -94,6 +52,23 @@
 
     .voucher-wrapper {
       padding: 0 rem(34);
+    }
+  }
+
+  .btn-wrapper {
+    text-align: center;
+    width: 100%;
+    margin-bottom: rem(42);
+
+    a {
+      @extend %button-brand;
+
+      cursor: pointer;
+      padding: rem(8) rem(33);
+    }
+
+    @include breakpoint($only-mobile) {
+      display: none;
     }
   }
 }
