CORE-43073: Return confirmation icon width fix on mobile.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_return-confirmation.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_return-confirmation.scss
@@ -111,9 +111,13 @@ body[class*="return-confirmation"] {
         }
       }
 
-      .refund {
-        @include breakpoint($only-mobile) {
-          width: 7.375rem;
+      @include breakpoint($only-mobile) {
+        .packitem {
+          width: rem(72);
+        }
+
+        .refund {
+          width: rem(118);
         }
       }
 
