CORE-39330: COS | PROD : Product labels placed at the bottom are not appearing correctly when visited SRP from Cart.

--- a/docroot/themes/custom/transac/alshaya_cos_stores/sass/components/products/_products-list.scss
+++ b/docroot/themes/custom/transac/alshaya_cos_stores/sass/components/products/_products-list.scss
@@ -109,7 +109,7 @@
     &.product-small {
       .alshaya_search_gallery {
         @include breakpoint($desktop) {
-          height: 37.125rem;
+          height: auto;
         }
 
         .alshaya_search_mainimage {
