--- a/docroot/themes/custom/transac/alshaya_cos_stores/conditional-sass/algolia-search/component/_algolia-react-search-page.scss
+++ b/docroot/themes/custom/transac/alshaya_cos_stores/conditional-sass/algolia-search/component/_algolia-react-search-page.scss
@@ -18,10 +18,12 @@
   .l-one--w.lhn-without-sidebar {
     #alshaya-algolia-search {
       .c-content__region {
-        @media(min-width: $tablet) {
+
+        @include breakpoint($tablet) {
           width: 96.5%;
         }
-        @media(min-width: ($desktop + 1)) {
+
+        @include breakpoint(($desktop + 1)) {
           max-width: $desktop-wide;
           padding: 0 rem(24);
         }
