CORE-39930: COS | PROD : Product labels placed at the bottom are not appearing correctly when visited SRP from Cart.

--- a/docroot/themes/custom/transac/alshaya_cos_stores/conditional-sass/algolia-search/component/_algolia-react-search-page.scss
+++ b/docroot/themes/custom/transac/alshaya_cos_stores/conditional-sass/algolia-search/component/_algolia-react-search-page.scss
@@ -22,7 +22,7 @@
           width: 96.5%;
         }
 
-        @include breakpoint(($desktop + 1)) {
+        @include breakpoint($desktop) {
           max-width: $desktop-wide;
           padding: 0 rem(24);
         }
