--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_return-confirmation.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_return-confirmation.scss
@@ -16,4 +16,15 @@
       }
     }
   }
+
+  .return-details-section {
+    .return-confirmation-detail-wrapper {
+      .return-request-date {
+        html[lang='ar'] & {
+          direction: ltr;
+          text-align: right;
+        }
+      }
+    }
+  }
 }
