--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/user/_user.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/user/_user.scss
@@ -219,6 +219,13 @@
           font-family: $hnm-demibold;
           font-weight: normal;
         }
+
+        .date {
+          html[lang='ar'] & {
+            direction: ltr;
+            text-align: right;
+          }
+        }
       }
 
       a.order-detail-page {
