CORE-43074: Order details page theming fixes.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-account/component/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-account/component/_order-details.scss
@@ -35,6 +35,10 @@
         background: $order_summary_row;
         padding: rem(21) rem(16);
       }
+
+      .blend {
+        background: $order_detail_order_summary_row_td_blend;
+      }
     }
   }
 
