CORE-0036: Signup: Text font/alignment and spacing between headers is not proper.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/social-links/_social-links.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/social-links/_social-links.scss
@@ -64,3 +64,19 @@
     }
   }
 }
+
+.c-user-register {
+  .block-alshaya-social-login {
+    padding-top: rem(32);
+  }
+
+  &.user-page {
+    main {
+      .block-system-main-block {
+        @include breakpoint($tablet) {
+          margin-top: rem(32);
+        }
+      }
+    }
+  }
+}
