--- a/docroot/themes/custom/transac/alshaya_white_label/sass/_utils.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/_utils.scss
@@ -623,13 +623,7 @@ $brand_theme_img_directory_path: '/themes/custom/transac/alshaya_white_label/img
 // Mixin to add a plain skeletal loader.
 @mixin plain-loader() {
   animation: plain-bg-load 1s infinite;
-  background-image:
-    linear-gradient(
-      90deg,
-      $loader-gradient-1,
-      $loader-gradient-2,
-      $loader-gradient-1
-    );
+  background-image: $plain-loader-gradient;
   background-repeat: repeat-y;
   background-size: 400% 8rem;
   background-position: 100% 0;
@@ -644,16 +638,8 @@ $brand_theme_img_directory_path: '/themes/custom/transac/alshaya_white_label/img
 // Mixin to add a text block skeletal loader.
 @mixin text-block-loader() {
   animation: text-bg-load 1s infinite;
-  background-image:
-    linear-gradient($loader-text-ph 1rem, $no-color 0),
-    linear-gradient($loader-text-ph 1rem, $no-color 0),
-    linear-gradient($loader-text-ph 1rem, $no-color 0),
-    linear-gradient(
-      90deg,
-      $loader-gradient-1,
-      $loader-gradient-2,
-      $loader-gradient-1
-    );
+  background-image: $text-loader-gradient, $text-loader-gradient,
+    $text-loader-gradient, $plain-loader-gradient;
   background-repeat: repeat-y;
   background-size: 90% 8rem, 90% 8rem, 75% 8rem, 400% 8rem;
   background-position: center 2rem, center 4rem, center 6rem, 100% 0;
