--- a/docroot/themes/custom/transac/alshaya_white_label/sass/_utils.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/_utils.scss
@@ -638,8 +638,11 @@ $brand_theme_img_directory_path: '/themes/custom/transac/alshaya_white_label/img
 // Mixin to add a text block skeletal loader.
 @mixin text-block-loader() {
   animation: text-bg-load 1s infinite;
-  background-image: $text-loader-gradient, $text-loader-gradient,
-    $text-loader-gradient, $plain-loader-gradient;
+  background-image:
+    $text-loader-gradient,
+    $text-loader-gradient,
+    $text-loader-gradient,
+    $plain-loader-gradient;
   background-repeat: repeat-y;
   background-size: 90% 8rem, 90% 8rem, 75% 8rem, 400% 8rem;
   background-position: center 2rem, center 4rem, center 6rem, 100% 0;
