--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-details.scss
@@ -539,6 +539,11 @@
     .attr-wrapper {
       display: inline-block;
       direction: ltr;
+      width: 100%;
+
+      html[lang=ar] & {
+        text-align: right;
+      }
     }
 
     .blend {
