--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
@@ -93,6 +93,11 @@ body {
     .attr-wrapper {
       display: inline-block;
       direction: ltr;
+      width: 100%;
+
+      html[lang=ar] & {
+        text-align: right;
+      }
     }
 
     td:nth-child(3) {
