DIG-9781: Rejected and cancelled reason theming on order details page.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_order-details.scss
@@ -40,5 +40,11 @@
         font-weight: normal;
       }
     }
+
+    .cancellation-reason {
+      .reason-label {
+        font-family: $hnm-demibold;
+      }
+    }
   }
 }
