CORE-0081: [EN/AR] - Alignment and UI issues In order details page.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-account/component/_account-dashboard.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-account/component/_account-dashboard.scss
@@ -15,6 +15,21 @@
     }
   }
 
+  .edit-account {
+    @include breakpoint($tablet) {
+      float: $right;
+      top: rem(-15);
+
+      &:hover {
+        color: $primary_btn_text;
+      }
+    }
+
+    @include breakpoint($only-mobile) {
+      display: none;
+    }
+  }
+
   .card--number {
     .black {
       color: $content_link_color;
