--- a/docroot/themes/custom/transac/alshaya_hnm/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/components/products/_product-detail.scss
@@ -810,10 +810,6 @@
         background-color: $hnm-black-three;
         font-family: $hnm-demibold;
 
-        &:hover {
-          background-color: $gray44;
-        }
-
         @include icon(shopping-bag) {
           font-size: 1.25rem;
           top: 0.4375rem;
@@ -844,6 +840,12 @@
           float: $left;
           margin-top: 1.45rem;
           margin-#{$left}: 0;
+        }
+
+        @include breakpoint($desktop) {
+          &:hover {
+            background-color: $gray44;
+          }
         }
       }
     }
