CORE-43236: Fixed alignment of get direction icon on map marker popup (CORE).

--- a/docroot/themes/custom/transac/alshaya_boots/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/conditional-sass/store-finder/component/_store-finder.scss
@@ -384,12 +384,16 @@
     }
   }
 
-  .get--directions a {
-    &::after {
-      #{$right}: 0.5rem;
-      width: 2.125rem;
-      height: 2.1875rem;
-      top: 0.5625rem;
+  .get--directions {
+    a {
+      position: relative;
+
+      &::after {
+        #{$right}: 0.5rem;
+        width: 2.125rem;
+        height: 2.1875rem;
+        top: rem(6);
+      }
     }
   }
 
