--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/store-finder/component/_store-finder.scss
@@ -1099,7 +1099,7 @@
     display: inline-block;
     position: absolute;
     background: url('../../../imgs/icons/ic-directions.svg');
-    #{$right}: 1rem;
+    #{$right}: rem(32);
     width: 18px;
     height: 18px;
 
