--- a/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/store-finder/component/_store-finder.scss
@@ -430,6 +430,12 @@
     background-image: url(#{$dh_theme_img_directory_path}/icons/ic-loader.svg) no-repeat;
     background-size: 4.5rem;
   }
+
+  .get--directions {
+    a::after {
+      #{$right}: rem(36);
+    }
+  }
 }
 
 .node--type-store {
