--- a/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/store-finder/component/_store-finder.scss
@@ -76,12 +76,18 @@
     }
   }
 
-  .get--directions a::after {
-    width: 1.875rem;
-    height: 1.875rem;
-    background-size: contain;
-    top: 0.25rem;
-    #{$right}: 0.625rem;
+  .get--directions {
+    a {
+      position: relative;
+
+      &::after {
+        width: 1.875rem;
+        height: 1.875rem;
+        background-size: contain;
+        top: 0.25rem;
+        #{$right}: rem(8);
+      }
+    }
   }
 
   .input--wrapper {
