--- a/docroot/themes/custom/transac/alshaya_boots/conditional-sass/store-finder/component/_store-finder.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/conditional-sass/store-finder/component/_store-finder.scss
@@ -389,9 +389,9 @@
       position: relative;
 
       &::after {
-        #{$right}: 0.5rem;
-        width: 2.125rem;
-        height: 2.1875rem;
+        #{$right}: rem(8);
+        width: rem(34);
+        height: rem(35);
         top: rem(6);
       }
     }
