--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-checkout/component/_spc-checkout-delivery-methods.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-checkout/component/_spc-checkout-delivery-methods.scss
@@ -1,5 +1,7 @@
-.spc-checkout-delivery-methods {
-  .delivery-method {
+.spc-checkout-delivery-methods,
+.spc-hello-member-checkout-rewards-block {
+  .delivery-method,
+  .loyalty-option {
     min-height: 3.875rem;
     background: $spc-checkout-delivery-method-bg;
     margin-bottom: 0.3125rem;
