--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-checkout/component/_spc-checkout-sections.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-checkout/component/_spc-checkout-sections.scss
@@ -3,7 +3,8 @@
     .spc-checkout-delivery-information,
     .spc-checkout-payment-options,
     .spc-section-billing-address,
-    .spc-aura-checkout-rewards-block {
+    .spc-aura-checkout-rewards-block,
+    .spc-hello-member-checkout-rewards-block {
       padding-top: 2.5rem;
     }
   }
