CORE-43039: If a customer is switching loyalty option, we should get confirmation via popup block with Yes/no option -- lint issue.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/spc-checkout/component/_spc-checkout-loyalty.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/spc-checkout/component/_spc-checkout-loyalty.scss
@@ -2,7 +2,7 @@
   .loyalty-confirmation-content {
     .loyalty-popup-block {
       .loyalty-popup-title {
-        font-family: $hnm-demibold
+        font-family: $hnm-demibold;
       }
     }
   }
