--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_return-confirmation.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_return-confirmation.scss
@@ -138,7 +138,7 @@ body[class*="return-confirmation"] {
         }
 
         @include breakpoint($tablet) {
-          width: 26.25rem;
+          width: rem(480);
         }
       }
     }
