--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/rcs-product-recommendation-teaser.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/rcs-product-recommendation-teaser.handlebars
@@ -40,7 +40,7 @@
                 {{{ render 'product.block.price' product.price_details }}}
               </div>
             </a>
-            <table class="mobile--only--sell {{ ../show_cart_form }}">
+            <table class="mobile--only--sell no-cart-form">
               <tbody>
                 <tr>
                   <td class="sell--image">
