CORE-43305: Replicate size attribute styles on text swatches.

--- a/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
+++ b/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
@@ -32,6 +32,42 @@
       border-radius: 1.375rem;
     }
   }
+
+  .li-swatch-text {
+    a {
+      border-radius: rem(21);
+      background: $plp-quick-view-product-size-active-bg;
+      border: 1px solid $plp-quick-view-product-size-border-hover;
+
+      &:hover {
+        background-color: $plp-quick-view-product-size-hover-bg;
+      }
+
+      &.active {
+        border-color: $plp-quick-view-product-size-active-border;
+        font-weight: bold;
+
+        &:hover {
+          background-color: $plp-quick-view-product-size-hover-bg;
+        }
+      }
+
+      &.disabled {
+        background: $pdp_disable_variant_bg;
+        opacity: 0.9;
+        color: $pdp_disable_variant_text;
+        border: 0;
+      }
+
+      .sku-form.has-groups & {
+        &.active {
+          &:hover {
+            background: $plp-quick-view-product-size-hover-bg;
+          }
+        }
+      }
+    }
+  }
 }
 
 .form-swatch-list-wrapper,
