--- a/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
@@ -25,4 +25,16 @@
       }
     }
   }
+  .li-swatch-text {
+    a {
+      &.disabled {
+        opacity: 0.3;
+      }
+
+      &:not(.active):hover {
+        background: $pdp_thumbimage_hover_bg;
+        color: $plp-quick-view-product-size-text;
+      }
+    }
+  }
 }
