--- a/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
+++ b/docroot/themes/custom/transac/alshaya_the_body_shop/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
@@ -12,4 +12,14 @@
       }
     }
   }
+
+  .li-swatch-text {
+    a {
+      background: $plp-quick-view-product-size-bg;
+
+      &.disabled {
+        border-color: $plp-quick-view-product-size-border-disabled;
+      }
+    }
+  }
 }
