--- a/docroot/themes/custom/transac/alshaya_muji/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
+++ b/docroot/themes/custom/transac/alshaya_muji/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
@@ -32,4 +32,25 @@
       border-radius: 100%;
     }
   }
+
+  .li-swatch-text {
+    a {
+      &:hover {
+        background-color: $plp-quick-view-product-size-hover-bg;
+        border-color: $plp-quick-view-product-size-border;
+      }
+
+      &.active {
+        &:hover {
+          border-color: $plp-quick-view-product-size-active-border;
+        }
+      }
+
+      &.disabled {
+        opacity: 0.3;
+        border-color: $plp-quick-view-product-size-disabled-border;
+        cursor: not-allowed;
+      }
+    }
+  }
 }
