--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
@@ -58,17 +58,35 @@
       margin-bottom: rem(5);
       margin-#{$right}: rem(8);
       margin-#{$left}: 0;
-      border: 1px solid $pdp_size_option_border;
+      border: 1px solid $plp-quick-view-product-size-border;
       text-align: center;
       padding: rem(9.6) rem(12);
-      font-size: rem(10);
-      color: $pdp_size_option_text;
+      font-size: rem(14);
+      color: $plp-quick-view-product-size-text;
       line-height: 1;
 
-      &.active,
-      &:hover {
-        color: $pdp_size_option_selected_text;
-        background: $pdp_size_option_selected_bg;
+      &:hover,
+      &.active {
+        background-color: $plp-quick-view-product-size-active-bg;
+        color: $plp-quick-view-product-size-text-active;
+        border-color: $plp-quick-view-product-size-border-hover;
+      }
+
+      &.disabled {
+        cursor: text;
+        border-color: $plp-quick-view-product-size-text-disabled;
+        color: $plp-quick-view-product-size-text-disabled;
+        pointer-events: none;
+      }
+
+      .sku-form.has-groups & {
+        &.active {
+          background: $plp-quick-view-product-group-size-active;
+  
+          &:hover {
+            background: $plp-quick-view-product-size-active-bg;
+          }
+        }
       }
     }
   }
