DIG-10200: Return request label theming fixes for disabled state.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2251,3 +2251,4 @@ $online-return-print-button-bg: $white-five;
 $online-return-status-green-label: $light-green;
 $online-return-status-orange-label: $red-orange;
 $online-return-cancellation-reason: $error-red;
+$online-return-disabled-txt: $white-five;
