--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/rcs-product-modal.handlebars
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/rcs-product-modal.handlebars
@@ -38,7 +38,7 @@
       {{ title_suffix }}
 
       <div class="price-block price-block-{{ cleanSku }}">
-        {{{render 'product.block.price' price_details }}}
+        {{{> product.block.price price_details }}}
       </div>
 
       {{#if postpay }}
