--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-points-history/component/_point-history.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-points-history/component/_point-history.scss
@@ -9,7 +9,7 @@
   .history-points-row {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid $primary_table_border;
+    border-bottom: rem(1) solid $primary_table_border;
     padding-top: rem(28);
     padding-bottom: rem(4);
 
@@ -139,8 +139,8 @@
     }
 
     .points-earned-block {
-      border-bottom: 1px solid $primary_table_border;
-      border-top: 1px solid $primary_table_border;
+      border-bottom: rem(1) solid $primary_table_border;
+      border-top: rem(1) solid $primary_table_border;
       padding: rem(32) 0;
       padding-#{$right}: rem(40);
 
