--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-points.scss
@@ -1,7 +1,7 @@
 .my-membership {
   .member-name {
     font-size: rem(20);
-    border-bottom: 1px solid $primary_border;
+    border-bottom: rem(1) solid $primary_border;
     padding-bottom: rem(10);
     margin-top: rem(-8);
     font-family: $alshaya-bold;
