--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-checkout/component/_spc-checkout-loyalty.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-checkout/component/_spc-checkout-loyalty.scss
@@ -47,7 +47,7 @@
         padding: rem(13);
         font-size: rem(20);
         font-family: $alshaya-bold;
-        border-bottom: 1px solid $content_pagetitle_border;
+        border-bottom: rem(1) solid $content_pagetitle_border;
 
         .close-modal {
           @include icon(close, after) {
