CORE-43305: Font weight fixes to use font family variables.

--- a/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
+++ b/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/plp-add-to-cart/component/_product-drawer-swatches.scss
@@ -45,7 +45,7 @@
 
       &.active {
         border-color: $plp-quick-view-product-size-active-border;
-        font-weight: bold;
+        font-family: $alshaya-bold;
 
         &:hover {
           background-color: $plp-quick-view-product-size-hover-bg;
