CORE-42821: AURA | Points shown as Sticky in PDP.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-pdp/component/_aura-pdp.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-pdp/component/_aura-pdp.scss
@@ -16,6 +16,12 @@
     margin: rem(36) 0;
   }
 
+  .magazine-layout & {
+    @include breakpoint($only-mobile) {
+      margin: 0;
+    }
+  }
+
   .points-text {
     span {
       color: $aura-cart-points;
@@ -57,4 +63,8 @@
   b {
     font-family: $aura-bold;
   }
+}
+
+#aura-pdp-mobile {
+  padding: 0 rem(16);
 }
