--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine.html.twig
@@ -128,10 +128,6 @@
           {% if quantity_limit_enabled == true %}
             <div class="order-quantity-limit-message"></div>
           {% endif %}
-          {% if aura_enabled is defined and aura_enabled %}
-            {{ attach_library('alshaya_white_label/aura-loyalty-pdp') }}
-            <div id="aura-pdp"></div>
-          {% endif %}
         </div>
 
         {% if online_returns_status is defined and online_returns_status %}
@@ -139,6 +135,13 @@
         {% endif %}
       </div>
     {% endblock %}
+
+    <div class="aura-pdp--desktop">
+      {% if aura_enabled is defined and aura_enabled %}
+        {{ attach_library('alshaya_white_label/aura-loyalty-pdp') }}
+        <div id="aura-pdp" class="mobile-only-hide"></div>
+      {% endif %}
+    </div>
 
     {% block pdpSidebar %}
       <div class="content__sidebar">
@@ -175,7 +178,13 @@
               </div>
             </div>
           {% endif %}
+        </div>
 
+        <div class="aura-pdp--mobile">
+          {% if aura_enabled is defined and aura_enabled %}
+            {{ attach_library('alshaya_white_label/aura-loyalty-pdp') }}
+            <div id="aura-pdp-mobile" class="mobile-only-show"></div>
+          {% endif %}
         </div>
 
         {% include directory ~ '/../alshaya_white_label/templates/partial/mobile-product-related.html.twig' %}
