CORE-43231: benefit lannding page expire date translation.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-points-history/component/_point-history.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-points-history/component/_point-history.scss
@@ -199,7 +199,7 @@
   }
 
   &.close-expiry-accordion {
-    max-height: 5.625rem !important;
+    max-height: rem(90) !important;
     overflow: hidden;
 
     .content {
