CORE-43231: translated added for benefit.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
@@ -102,6 +102,10 @@
       margin: 0;
       color: $hm-benefit-description-heading-txt;
       font-size: rem(16);
+
+      html[lang=ar] & {
+        margin-bottom: rem(8);
+      }
     }
   }
 
