CORE-43231: line height added for arabic btn.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
@@ -7,6 +7,10 @@
     .qr-code-button,
     .button-wide {
       font-family: $hnm-demibold;
+
+      html[lang=ar] & {
+        line-height: normal;
+      }
     }
   }
 
