--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/plp-add-to-cart/component/_product-drawer.scss
@@ -8,6 +8,7 @@
           top: 0;
           position: absolute;
           #{$left}: 80%;
+          white-space: nowrap;
 
           html[lang=ar] & {
             right: 72%;
