CORE-43073: Return confirmation icon width fix on mobile AR.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_return-confirmation.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_return-confirmation.scss
@@ -119,6 +119,16 @@ body[class*="return-confirmation"] {
         .refund {
           width: rem(118);
         }
+
+        html[lang=ar] & {
+          .packitem {
+            width: rem(56);
+          }
+
+          .refund {
+            width: rem(76);
+          }
+        }
       }
 
       .title {
