--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_order-details.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_order-details.scss
@@ -402,9 +402,19 @@
         margin-bottom: 0;
       }
 
+      .reason-wrapper {
+        display: flex;
+
+        > div {
+          padding-#{$right}: rem(3);
+          margin-bottom: 0;
+        }
+      }
+
       .reason-label {
         color: $online-return-cancellation-reason;
         font-family: $alshaya-bold;
+        margin-#{$right}: rem(4);
       }
     }
   }
