CORE-43158: Super Category | iPad: Position of store icon is incorrect.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-header.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-header.scss
@@ -373,7 +373,11 @@
   .c-menu-primary {
     .mobile--menu {
       @include breakpoint($upto-desktop) {
-        top: 1.5rem;
+        top: rem(24);
+      }
+
+      @include breakpoint($only-tablet) {
+        top: rem(19);
       }
     }
   }
