--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine.html.twig
@@ -18,7 +18,7 @@
   <div class="content-sidebar-wrapper">
     {% block titleBlock %}
       <div class="content__title_wrapper">
-        {% if hello_member_enabled is defined and hello_member_enabled %}
+        {% if hello_member_status is defined and hello_member_status %}
           <div id="hello-member-pdp"></div>
         {% endif %}
         {% if quantity_limit_enabled == true %}
